[gd_scene load_steps=2 format=3 uid="uid://bcufqis3pixpv"]

[ext_resource type="Script" uid="uid://ctrkatorla3n4" path="res://level.gd" id="1_06t4h"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 449.0
offset_top = 317.0
offset_right = 713.0
offset_bottom = 466.0

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
